syntax = "proto3";

package proto;

option go_package = "github.com/its-my-data/doubak/proto";

// Flag defines the names of all runtime flags.
// Next: 9
enum Flag {
    // The user name.
    user = 0;

    // Tasks to run.
    tasks = 1;

    // Categories to run on.
    categories = 2;

    // Output path/directory.
    output_dir = 3;

    // Input file path to cookies.txt.
    cookies_file = 8;

    // Incremental running or starting over with overriding existing files.
    incremental = 4;

    // Proxy used to send each request via.
    proxy = 5;

    // Max number of retries.
    max_retry = 6;

    // Min time between any two requests.
    req_delay = 7;
}
